fixed video player, fixed steps gap and toc

--- a/src/apps/devdoc/style.css
+++ b/src/apps/devdoc/style.css
@@ -1,9 +1,9 @@
-@import url("./fonts/Inter-var.css");
-@import url("./fonts/Familjen-Grotesk.css");
-@import "../../design-system/css/primitives.css";
-@import "../../design-system/css/default.css";
-@import "../../design-system/css/dark.css";
-@import "./css/shiki.css";
+@import url('./fonts/Inter-var.css');
+@import url('./fonts/Familjen-Grotesk.css');
+@import '../../design-system/css/primitives.css';
+@import '../../design-system/css/default.css';
+@import '../../design-system/css/dark.css';
+@import './css/shiki.css';
 
 /* @import url('./fonts/Sriracha.css'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap'); */
@@ -28,7 +28,7 @@ html {
   -webkit-tap-highlight-color: transparent;
   /* scrollbar-gutter: stable; */
   @apply wb-scroll-pt-[50px] wb-bg-surface-basic-subdued;
-  font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+  font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
 }
 
 .scrollbar-gutter {
@@ -36,7 +36,7 @@ html {
 }
 
 .scrollbar-gutter-auto {
-  scrollbar-gutter: "auto";
+  scrollbar-gutter: 'auto';
 }
 
 .dark-hidden {
@@ -65,7 +65,7 @@ html {
 }
 
 .kl-steps > h3 {
-  @apply wb-sticky wb-top-[50px] wb-bg-surface-basic-subdued wb-pb-[6px] wb-mt-[6px];
+  @apply wb-sticky wb-top-[50px] wb-bg-surface-basic-subdued wb-pb-[6px] wb-mt-[40px];
 }
 
 .kl-steps > p {
@@ -144,7 +144,7 @@ code {
   }
 
   .graph2::before {
-    content: "";
+    content: '';
     background-size:
       100% 6%,
       100% 6%,
